# MinishEngine

./: .gitignore  Action.h  CMakeLists.txt  InputHandler.h  InputManager.cpp  InputManager.h  Makefile  README.md  State.cpp  State.h  StateManager.h  TileSet.h
Core/Audio/: AudioComponent.cpp  AudioComponent.h  AudioManager.cpp  AudioManager.h
Core/Entity/: Component.cpp  Component.h  DataComponent.cpp  DataComponent.h  DataComponent.tmpl  Entity.cpp  Entity.h
Core/Graphics/: Animation.cpp  Animation.h  Frame.cpp  Frame.h  GraphicsComponent.cpp  GraphicsComponent.h  TextureManager.cpp  TextureManager.h
Core/Input/: InputComponent.h  InputHandler.cpp  InputHandler.h  InputManager.cpp  InputManager.h
Core/Physics/: AABB.cpp  AABB.h  PhysicsBody.cpp  PhysicsBody.h  PhysicsCollider.cpp  PhysicsCollider.h  PhysicsComponent.cpp  PhysicsComponent.h  PhysicsEnvironment.cpp  PhysicsEnvironment.h
Core/System/: Action.h  Application.cpp  Application.h  State.cpp  State.h  StateManager.cpp  StateManager.h  Subsystem.cpp  Subsystem.h  Task.cpp  Task.h
Core/Tiles/: TileMap.cpp  TileMap.h  TileSet.cpp  TileSet.h
Core/UI/: UIButton.cpp  UIButton.h  UIElement.cpp  UIElement.h  UIText.cpp  UIText.h
Entity/: Component.cpp  Component.h  Entity.cpp  Entity.h
Graphics/: GraphicsComponent.cpp
Input/: InputHandler.cpp  InputManager.cpp
Physics/: AABB.cpp
System/: Action.h
Tiles/: TileMap.cpp  TileMap.h  TileSet.cpp  TileSet.h
